--- a/ChameleonServices.Web/wwwroot/manifest.json
+++ b/ChameleonServices.Web/wwwroot/manifest.json
@@ -18,6 +18,6 @@
   }],
   "related_applications": [{
     "platform": "web",
-    "url": "https://chameleon-services.com"
+    "url": "https://chameleon.services"
   }]
 }
