--- a/ChameleonServices.Web/ChameleonServices.Web.csproj
+++ b/ChameleonServices.Web/ChameleonServices.Web.csproj
@@ -12,13 +12,12 @@
 
   <ItemGroup>
     <None Include="compilerconfig.json" />
-    <None Include="wwwroot\chameleon-iconset-svg.html" />
-    <None Include="wwwroot\chameleon-login-button.html" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.3" PrivateAssets="all" />
+    <PackageReference Include="MudBlazor" Version="6.0.9" />
   </ItemGroup>
 
   <ItemGroup>
