--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ functions/.runtimeconfig.json
 /ChameleonServices.Web/.vs/ChameleonServices.Web
 /ChameleonServices.Web/bin/Debug/net6.0
 /ChameleonServices.Web/obj
+/ChameleonServices.Web/bin
+/ChameleonServices.Web/publish
