--- a/ChameleonServices.Web/compilerconfig.json
+++ b/ChameleonServices.Web/compilerconfig.json
@@ -13,6 +13,10 @@
   },
   {
     "outputFile": "wwwroot/css/app.css",
-    "inputFile": "wwwroot/css/app.scss"
+    "inputFile": "wwwroot/scss/app.scss"
+  },
+  {
+    "outputFile": "Shared/MainLayout.razor.css",
+    "inputFile": "Shared/MainLayout.razor.scss"
   }
 ]
